[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/Snail C 7.png" type="Texture" id=1]
[ext_resource path="res://PlayerScript.gd" type="Script" id=2]
[ext_resource path="res://assets/Snail B 7.png" type="Texture" id=3]
[ext_resource path="res://WallGenerator.gd" type="Script" id=4]
[ext_resource path="res://assets/Snail A 7.png" type="Texture" id=5]
[ext_resource path="res://assets/Snail D 7.png" type="Texture" id=6]
[ext_resource path="res://Floor.gd" type="Script" id=7]
[ext_resource path="res://World.gd" type="Script" id=8]
[ext_resource path="res://assets/Snail E 7.png" type="Texture" id=9]
[ext_resource path="res://Platform.tscn" type="PackedScene" id=10]
[ext_resource path="res://SmallPlatform1.tscn" type="PackedScene" id=11]
[ext_resource path="res://Wall.tscn" type="PackedScene" id=12]
[ext_resource path="res://FloorShape.gd" type="Script" id=13]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "Fall",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 1 ) ],
"loop": true,
"name": "Run",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 26.3687
height = 11.0055

[sub_resource type="LineShape2D" id=3]

[sub_resource type="Curve2D" id=4]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 32, 0, 0, 0, 0, 0, 320, 0, 0, 0, 0, 0, 544, 0 )
}

[node name="World" type="Node"]
script = ExtResource( 8 )
platform_scene = ExtResource( 10 )
small_platform_scene = ExtResource( 11 )

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 208, 896 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="AnimatedSprite" parent="Player"]
frames = SubResource( 1 )
animation = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( -4, 0 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
limit_left = 0
limit_right = 576
limit_smoothed = true
drag_margin_v_enabled = true
drag_margin_top = 0.0
drag_margin_bottom = 0.4
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="Floor" type="Area2D" parent="."]
position = Vector2( 288, 1120 )
scale = Vector2( 1.56, 1 )
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="FloorShape" type="CollisionShape2D" parent="Floor"]
scale = Vector2( 7.24, 1 )
shape = SubResource( 3 )
script = ExtResource( 13 )

[node name="PlatformPath" type="Path2D" parent="."]
curve = SubResource( 4 )

[node name="PlatformSpawn" type="PathFollow2D" parent="PlatformPath"]
position = Vector2( 32, 0 )

[node name="Platforms" type="Node" parent="."]

[node name="Platform1" parent="Platforms" instance=ExtResource( 10 )]
position = Vector2( 496, 64 )

[node name="Platform3" parent="Platforms" instance=ExtResource( 10 )]
position = Vector2( 432, 672 )

[node name="Platform2" parent="Platforms" instance=ExtResource( 10 )]
position = Vector2( 120, 507.54 )

[node name="SmallPlatform1" parent="Platforms" instance=ExtResource( 11 )]
position = Vector2( 104, 216 )

[node name="SmallPlatform2" parent="Platforms" instance=ExtResource( 11 )]
position = Vector2( 448, 304 )

[node name="SmallPlatform3" parent="Platforms" instance=ExtResource( 11 )]
position = Vector2( 232, 960 )

[node name="SmallPlatform4" parent="Platforms" instance=ExtResource( 11 )]
position = Vector2( 544, 1000 )

[node name="Timer" type="Timer" parent="Platforms"]
wait_time = 1.5
autostart = true

[node name="DeathLine" type="Position2D" parent="Platforms"]
position = Vector2( 288, 1624 )

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 288, -48 )

[node name="Walls" type="Node" parent="."]

[node name="Wall1" parent="Walls" instance=ExtResource( 12 )]
position = Vector2( -24, -560 )

[node name="Wall2" parent="Walls" instance=ExtResource( 12 )]
position = Vector2( -24, -480 )

[node name="Wall3" parent="Walls" instance=ExtResource( 12 )]
position = Vector2( -24, -400 )

[node name="Wall4" parent="Walls" instance=ExtResource( 12 )]
position = Vector2( -24, -320 )

[node name="Wall5" parent="Walls" instance=ExtResource( 12 )]
position = Vector2( -24, -240 )

[node name="Wall6" parent="Walls" instance=ExtResource( 12 )]
position = Vector2( -24, -160 )

[node name="Wall7" parent="Walls" instance=ExtResource( 12 )]
position = Vector2( -24, -80 )

[node name="Wall8" parent="Walls" instance=ExtResource( 12 )]

[node name="Wall9" parent="Walls" instance=ExtResource( 12 )]
position = Vector2( -24, 80 )

[node name="Wall10" parent="Walls" instance=ExtResource( 12 )]
position = Vector2( -24, 160 )

[node name="Wall11" parent="Walls" instance=ExtResource( 12 )]
position = Vector2( -24, 240 )

[node name="Wall12" parent="Walls" instance=ExtResource( 12 )]
position = Vector2( -24, 320 )

[node name="Wall13" parent="Walls" instance=ExtResource( 12 )]
position = Vector2( -24, 400 )

[node name="Wall14" parent="Walls" instance=ExtResource( 12 )]
position = Vector2( -24, 480 )

[node name="Wall15" parent="Walls" instance=ExtResource( 12 )]
position = Vector2( -24, 560 )

[node name="Wall16" parent="Walls" instance=ExtResource( 12 )]
position = Vector2( -24, 640 )

[node name="Wall17" parent="Walls" instance=ExtResource( 12 )]
position = Vector2( -24, 720 )

[node name="Wall18" parent="Walls" instance=ExtResource( 12 )]
position = Vector2( -24, 800 )

[node name="Wall19" parent="Walls" instance=ExtResource( 12 )]
position = Vector2( -24, 880 )

[node name="Wall20" parent="Walls" instance=ExtResource( 12 )]
position = Vector2( -24, 960 )

[node name="Wall21" parent="Walls" instance=ExtResource( 12 )]
position = Vector2( -24, 1040 )

[node name="Wall22" parent="Walls" instance=ExtResource( 12 )]
position = Vector2( -24, 1120 )

[node name="Wall23" parent="Walls" instance=ExtResource( 12 )]
position = Vector2( -24, 1200 )

[node name="Wall24" parent="Walls" instance=ExtResource( 12 )]
position = Vector2( -24, 1280 )

[node name="Wall25" parent="Walls" instance=ExtResource( 12 )]
position = Vector2( -24, 1360 )

[node name="Wall26" parent="Walls" instance=ExtResource( 12 )]
position = Vector2( -24, 1440 )

[node name="Wall27" parent="Walls" instance=ExtResource( 12 )]
position = Vector2( -24, 1520 )

[node name="WallGenerator" type="Position2D" parent="."]
position = Vector2( 0, 1416 )
script = ExtResource( 4 )
wall = ExtResource( 12 )
grid_size = 32

[connection signal="instance_node" from="." to="." method="instance_node"]
[connection signal="fell" from="Player" to="." method="new_game"]
[connection signal="body_shape_entered" from="Floor" to="Player" method="_on_Floor_body_shape_entered"]
[connection signal="death_line" from="Floor" to="." method="_on_Floor_death_line"]
[connection signal="timeout" from="Platforms/Timer" to="." method="_on_Timer_timeout"]
